--- a/Air BnB Full Project/Readme
+++ b/Air BnB Full Project/Readme
@@ -1,1 +1,25 @@
+Airbnb Data Visualization – Tableau Project
+📌 Overview
+This project analyzes the Airbnb dataset to uncover insights about property pricing, availability, and customer trends.
+The analysis was done using Tableau, supported by Python for data cleaning.
 
+🔍 Key Insights
+Price variability by bedrooms
+Geographic pricing trends by ZIP code
+High-demand areas and seasonal patterns
+Revenue trends over time
+📊 Tools Used
+Tableau Public
+Python (Pandas, NumPy for data cleaning)
+📂 Project Files
+Dashboard.png – Screenshot of the Tableau dashboard
+Project_Link.txt – Direct link to the interactive dashboard
+data/ – [Dataset used for analysis (if shareable)](https://www.kaggle.com/datasets/alexanderfreberg/airbnb-listings-2016-dataset)
+
+🔗 View Interactive Dashboard
+[Click here to view the Tableau dashboard](https://public.tableau.com/views/AirBnBFullProject_17551928015120/Dashboard1)
+
+📜 Author
+Gandham Gunashekhar
+📧 shekar.df7@gmail.com
+[LinkedIn](http://www.linkedin.com/in/guna7075) | [GitHub](https://github.com/Guna1610)
